🔧 chore(build): run benchmarks, document results, add CI pipeline and enforce formatting
- fix JMH forking by running the shaded uber-jar (exec:java classpath does not
  propagate to forked JVMs); the benchmark main appends the JDK 21 JVM opens
  to forked JVMs automatically and cleans its data directory per iteration
- benchmark results recorded in docs/benchmark-notes.md: single write ~1.2M
  msgs/s, batch write ~1.0M msgs/s, read+commit pipeline ~25k msgs/s
  (latency-bound single-consumer shape) on JDK 21 / Windows / 5.27ea5
- README rewritten in English: quick starts, full configuration table, gap
  and idempotency contract, benchmark results and CI notes
- GitHub Actions workflow: mvnw verify on push/PR (tests + jacoco + enforced
  spotless:check now bound to verify) plus a workflow_dispatch benchmark job
  running the shaded jar; build warning fixed in the console sample pom
- second full review pass: no leftover placeholders, starter copies all 11
  bindable configuration fields, 67 tests green