@@ -5,6 +5,8 @@ import io.github.cocosip.latchq.LatchQueueBuilder;
 import io.github.cocosip.latchq.LogEntry;
 import java.nio.file.Path;
 import java.time.Duration;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -18,25 +20,35 @@ import org.openjdk.jmh.annotations.Setup;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.annotations.Warmup;
+import org.openjdk.jmh.runner.Runner;
+import org.openjdk.jmh.runner.options.OptionsBuilder;
 
 /**
- * JMH benchmarks for LatchQueue. Run (JDK 21 needs the Chronicle JVM opens, see
- * docs/spike-notes.md):
+ * JMH benchmarks for LatchQueue: single-write throughput, batch-write throughput and a read-commit
+ * pipeline benchmark that feeds itself (when drained it writes a fresh batch, so the numbers
+ * measure real end-to-end read+commit cost).
+ *
+ * <p>Run:
  *
  * <pre>
- * MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED ..." \
- *   mvnw -pl latchq-benchmarks package exec:java
+ * mvnw -pl latchq-benchmarks package exec:java
  * </pre>
  *
- * Optionally restrict to one benchmark: -Dexec.args="'write'"
+ * Chronicle needs the JDK 21 JVM opens; the main method appends them to the forked JMH JVM
+ * automatically. Restrict to one benchmark with -Dexec.args="write".
  */
 @State(Scope.Benchmark)
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.SECONDS)
-@Warmup(iterations = 2, time = 2)
-@Measurement(iterations = 3, time = 3)
+@Warmup(iterations = 2, time = 1)
+@Measurement(iterations = 3, time = 2)
 @Fork(1)
 public class LatchQueueBenchmark {
+
+    private static final int BATCH = 100;
+
+    /** self-feed size for the read benchmark: big enough to hide the scan catch-up latency */
+    private static final int SELF_FEED = 2000;
 
     record Event(int id, String pad) {}
 
@@ -58,35 +70,80 @@ public class LatchQueueBenchmark {
     @TearDown(Level.Iteration)
     public void tearDown() {
         queue.close();
+        deleteRecursively(dataDir);
     }
 
-    /** Single-threaded write throughput (per write call, one message). */
+    private static void deleteRecursively(Path path) {
+        if (path == null || !java.nio.file.Files.exists(path)) {
+            return;
+        }
+        try {
+            java.nio.file.Files.walk(path)
+                    .sorted(java.util.Comparator.reverseOrder())
+                    .forEach(
+                            p -> {
+                                try {
+                                    java.nio.file.Files.delete(p);
+                                } catch (java.io.IOException ignored) {
+                                    // benchmark cleanup best effort
+                                }
+                            });
+        } catch (java.io.IOException ignored) {
+            // ignore
+        }
+    }
+
+    /** Single-message write throughput (ops = one write call). */
     @Benchmark
     public long write() {
         return queue.write(new Event(nextId++, "p".repeat(100)));
     }
 
-    /** Batch write throughput (per batchWrite call, 100 messages). */
+    /** Batch write throughput (ops = one batchWrite call of 100 messages). */
     @Benchmark
-    public java.util.List<Long> batchWrite() {
-        var values = new java.util.ArrayList<Event>(100);
-        for (int i = 0; i < 100; i++) {
+    public List<Long> batchWrite() {
+        var values = new ArrayList<Event>(BATCH);
+        for (int i = 0; i < BATCH; i++) {
             values.add(new Event(nextId++, "p".repeat(100)));
         }
         return queue.batchWrite(values);
     }
 
-    /** Concurrent consumer throughput: drains whatever the scan thread has delivered. */
+    /**
+     * Read+commit pipeline throughput (ops = one read call of up to 100 entries). Self-feeding:
+     * once the scan thread is caught up the benchmark writes a fresh batch of 2000, so the reads
+     * mostly drain real backlogs instead of measuring the catch-up poll latency. Report messages/s
+     * as ops × 100 (the read batch size).
+     */
     @Benchmark
     public int read() {
-        var batch = queue.read(100, Duration.ofMillis(1));
+        var batch = queue.read(BATCH, Duration.ofMillis(50));
         int n = batch.size();
         if (n > 0) {
-            // commit so progress advances; keeps the pipeline flowing across iterations
-            for (LogEntry<Event> entry : batch) {
-                queue.commit(java.util.List.of(entry.position()));
+            queue.commit(batch.stream().map(LogEntry::position).toList());
+        } else {
+            var values = new ArrayList<Event>(SELF_FEED);
+            for (int i = 0; i < SELF_FEED; i++) {
+                values.add(new Event(nextId++, "p".repeat(100)));
             }
+            queue.batchWrite(values);
         }
         return n;
+    }
+
+    public static void main(String[] args) throws Exception {
+        var builder =
+                new OptionsBuilder()
+                        .include(LatchQueueBenchmark.class.getSimpleName())
+                        .jvmArgsAppend(
+                                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                                "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED");
+        if (args.length > 0) {
+            builder.include(".*" + args[0] + ".*");
+        }
+        new Runner(builder.build()).run();
     }
 }
